# git-browser

./: Cargo.toml  build_package.sh  config.example.toml  config.toml
migrations/: 001_initial_schema.sql  002_add_diff_index.sql
src/: config.toml  main.rs
src/domain/: entities.rs  value_objects.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: mod.rs  moka_cache.rs
src/infrastructure/git/: client.rs  mod.rs
src/infrastructure/sqlite/: branch_repo.rs  commit_repo.rs  mod.rs  repository_repo.rs
src/ports/: branch.rs  cache.rs  commit.rs  git.rs  mod.rs  repository.rs
src/presentation/: dto.rs  mod.rs  routes.rs  templates.rs
src/presentation/handlers/: branch.rs  commit.rs  mod.rs  repository.rs
src/services/: discovery.rs  mod.rs  scheduler.rs  worker.rs
src/shared/: config.rs  error.rs  mod.rs  result.rs
statics/: app.js  highlight-dark.css  highlight.css  index.html  style.css  style.css.bak
templates/: base.html  commit.html  commit_simple.html  diff.html  diff_simple.html  index.html  index_simple.html  log.html  log_simple.html  summary.html  summary_simple.html
templates/macros/: alert.html  refs.html
templates/repo/: base.html
