[package]
name = "gitx"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
anyhow = { version = "1.0.62", features = ["backtrace"] }
thiserror = "2.0.17"

# Web framework
axum = "0.8.8"
tower = "0.5.2"
tower-service = "0.3"
tower-layer = "0.3"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["io"] }
futures = "0.3"

# Database - SQLite
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Git operations
git2 = "0.20.3"

# CLI
clap = { version = "4.5.53", features = ["cargo", "derive"] }

# Cache
moka = { version = "0.12.12", features = ["future"] }

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0.144", features = ["derive"] }
bincode = "1.3.3"
toml = "0.9.8"

# Utilities
bytes = "1.11.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

# Template and UI
askama = { version = "0.15.0", features = ["derive"]}
md-5 = "0.10"
hex = "0.4"
